--- a/src/main/java/org/harunjaganjac/example/ui/ResetPassword.form
+++ b/src/main/java/org/harunjaganjac/example/ui/ResetPassword.form
@@ -1,39 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.Register">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.harunjaganjac.example.ui.ResetPassword">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="792" height="624"/>
+      <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties>
-      <background color="-8388480"/>
-      <enabled value="true"/>
-      <visible value="true"/>
-    </properties>
-    <clientProperties>
-      <html.disable class="java.lang.Boolean" value="false"/>
-    </clientProperties>
+    <properties/>
     <border type="none"/>
     <children>
-      <vspacer id="bc55f">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <grid id="b3a3c" layout-manager="FormLayout">
+      <grid id="5bff2" layout-manager="FormLayout">
         <rowspec value="center:d:grow"/>
         <rowspec value="top:3dlu:noGrow"/>
         <rowspec value="center:max(d;4px):noGrow"/>
         <colspec value="fill:d:grow"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1"/>
         </properties>
         <border type="line"/>
         <children>
-          <grid id="38365" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d3015" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -47,34 +35,26 @@
               <color color="-8388480"/>
             </border>
             <children>
-              <component id="275a8" class="javax.swing.JLabel">
+              <component id="17091" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-7578772"/>
                   <foreground color="-1"/>
-                  <text value="Username"/>
+                  <text value="New Password"/>
                 </properties>
               </component>
-              <component id="b91e2" class="javax.swing.JLabel">
+              <component id="fce18" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <foreground color="-1"/>
-                  <text value="Password"/>
+                  <text value="Old Password"/>
                 </properties>
               </component>
-              <component id="6fd0f" class="javax.swing.JButton" binding="hideShowPasswordButton">
-                <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="7c5b5" class="javax.swing.JTextField" binding="usernameField">
+              <component id="8a494" class="javax.swing.JTextField" binding="newPassword">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -82,7 +62,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="96a02" class="javax.swing.JPasswordField" binding="passwordField">
+              <component id="dcfea" class="javax.swing.JTextField" binding="oldPassword">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -92,7 +72,7 @@
               </component>
             </children>
           </grid>
-          <grid id="5b728" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ca54f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -101,41 +81,41 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="5bc5a" layout-manager="GridBagLayout">
+              <grid id="4204b" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="b05df" class="javax.swing.JButton" binding="loginButton" default-binding="true">
+                  <component id="bc615" class="javax.swing.JButton" binding="cancelButton">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <text value="Login"/>
+                      <text value="Cancel"/>
                     </properties>
                   </component>
-                  <hspacer id="7eca2">
+                  <hspacer id="bed2b">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </hspacer>
-                  <vspacer id="9cc72">
+                  <vspacer id="da384">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                   </vspacer>
-                  <component id="1d06d" class="javax.swing.JButton" binding="registerButton" default-binding="true">
+                  <component id="41057" class="javax.swing.JButton" binding="changeButton">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <text value="Register"/>
+                      <text value="Change"/>
                     </properties>
                   </component>
                 </children>
@@ -144,15 +124,12 @@
           </grid>
         </children>
       </grid>
-      <component id="43b45" class="javax.swing.JLabel" binding="titleHeader" custom-create="true">
+      <component id="fbb99" class="javax.swing.JLabel" binding="title">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1"/>
-          <font name="Consolas" size="24" style="1"/>
-          <foreground color="-1"/>
-          <text value="WELCOME TO HR MANAGER"/>
+          <text value="CHANGE PASSWORD"/>
         </properties>
       </component>
     </children>
